--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 </head>
 <body class="bg-gray-100 p-4">
     <div id="root"></div>
-    <canvas id="chart" width="800" height="400"></canvas>
+    <div class="max-w-4xl mx-auto">
+        <canvas id="chart" width="800" height="400"></canvas>
+    </div>
 
     <script type="text/babel">
         function DarlehensRechner() {
